# meshJND

./: .gitignore  CMakeLists.txt  README.md
data/: bimba_low.off  buste.off
src/geometry/: mesh.cpp  mesh.h  mesh_utils.cpp  mesh_utils.h
src/models/: contrastmasking.h  contrastsensitivity.h  psychometricfunction.h  threshold.h  visibility.h
src/perception/: basecontrastcomputor.h  basefrequencycomputor.h  basejnd.cpp  basejnd.h  flatcontrastcomputor.cpp  flatcontrastcomputor.h  flatfrequencycomputor.cpp  flatfrequencycomputor.h  flatjnd.cpp  flatjnd.h  types.h
src/test/: test_attributes.cpp  test_flatjnd.cpp  test_models.cpp  test_sampler.cpp
src/utils/: colormap.cpp  colormap.h  genericparametricmodel.h  lightsampler.cpp  lightsampler.h  math_utils.cpp  math_utils.h  unitconverter.h
